# bcas

./: CMakeLists.txt  README.md
.github/workflows/: ci-test.yml
cmake/: Doxyfile.in  bcasConfig.cmake.in
docs/manual/: cas-client.md  index.md
examples/: CMakeLists.txt
examples/cas_validate_demo/: CMakeLists.txt  cas_validate_demo.cc
include/bcas/: bcas.h
include/bcas/client/: cas_client_task.h  cas_proxy_callback.h  cas_proxy_task.h  cas_types.h
scripts/: cas_container_smoke.sh
src/: CMakeLists.txt
src/client/: cas_client_task.cc  cas_detail.cc  cas_detail.h  cas_proxy_callback.cc  cas_proxy_task.cc
tests/: CMakeLists.txt
tests/general/client/: CMakeLists.txt  integration_cas_task_flow_test.cc  unit_cas_client_task_test.cc  unit_cas_proxy_callback_test.cc
tests/support/: test_http_client_task.h
